--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/yossiL16/riddles_cli_test/issues"
   },
-  "homepage": "https://github.com/yossiL16/riddles_cli_test#readme"
+  "homepage": "https://github.com/yossiL16/riddles_cli_test#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
